k8s_gke/front-service.yml
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  selector:
    app: front-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
