k8s_gke/pdf-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pdf-service
spec:
  selector:
    app: pdf-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
  type: ClusterIP
