k8s_gke/postgres-image-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-image
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-image
  template:
    metadata:
      labels:
        app: postgres-image
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-image-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-image
spec:
  selector:
    app: postgres-image
  ports:
    - protocol: TCP
      port: 5401
      targetPort: 5432
  type: ClusterIP
